correction reponsive wrap section skills

--- a/styles/skills.css
+++ b/styles/skills.css
@@ -17,6 +17,7 @@ section.skills ul{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 10px;
     margin: 30px 0;
     width: 100%;
     min-height: 70vh;
@@ -48,15 +49,18 @@ section.skills ul li article p.tittle{
 /**
     Responsive
 */
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 1630px) {
     section.skills ul{
-        width: 75%;
+        width: 73%;
     }
 }
 @media screen and (max-width: 768px) {
     section.skills h1 {
         font-size: 3rem;
     
+    }
+    section.skills ul{
+        width: 100%;
     }
     section.skills ul li {
         width: 80%;
